Implementación de métodos y guardado en base de datos